--- a/MainCodeChallenge/MainCodeChallenge.csproj
+++ b/MainCodeChallenge/MainCodeChallenge.csproj
@@ -151,6 +151,7 @@
       <DependentUpon>ModelCodeChallenge.edmx</DependentUpon>
     </Compile>
     <Compile Include="Models\Account.cs" />
+    <Compile Include="Models\ApprovalStatus.cs" />
     <Compile Include="Models\ChallengeApprovalStatusP.cs" />
     <Compile Include="Models\ChallengeApprovalStatus.cs" />
     <Compile Include="Models\Enums.cs" />
@@ -213,6 +214,7 @@
     <Content Include="Content\bootstrap-theme.min.css" />
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
+    <Content Include="Content\ChD.css" />
     <Content Include="Content\StyleLogin.css" />
     <Content Include="favicon.ico" />
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
