--- a/MainCodeChallenge/Web.config
+++ b/MainCodeChallenge/Web.config
@@ -17,11 +17,10 @@
   <system.web>
     <compilation debug="true" targetFramework="4.8" />
     <httpRuntime targetFramework="4.8" />
-
-	  <authentication mode="Forms">
-		  <forms loginUrl="/Account/login" name=".ASPXFORMSAUTH" timeout="20"></forms>
-	  </authentication>
-	  
+    <authentication mode="Forms">
+      <forms loginUrl="/Account/login" name=".ASPXFORMSAUTH" timeout="20">
+      </forms>
+    </authentication>
   </system.web>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
@@ -74,6 +73,4 @@
       <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
     </providers>
   </entityFramework>
-
-	
 </configuration>
