--- a/MainCodeChallenge/MainCodeChallenge.csproj
+++ b/MainCodeChallenge/MainCodeChallenge.csproj
@@ -218,6 +218,7 @@
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
     <Content Include="Content\ChD.css" />
+    <Content Include="Content\ChDetail.css" />
     <Content Include="Content\StyleLogin.css" />
     <Content Include="favicon.ico" />
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
