--- a/MainCodeChallenge/Web.config
+++ b/MainCodeChallenge/Web.config
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="UTF-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <!--
   For more information on how to configure your ASP.NET application, please visit
   https://go.microsoft.com/fwlink/?LinkId=301880
@@ -69,6 +69,7 @@
   </system.codedom>
   <connectionStrings>
     <add name="CodeChallengeEntities" connectionString="metadata=res://*/ModelCodeChallenge.csdl|res://*/ModelCodeChallenge.ssdl|res://*/ModelCodeChallenge.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=.;initial catalog=CodeChallenge;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="CodeChallengeEntities1" connectionString="metadata=res://*/ModelCodeChallenge.csdl|res://*/ModelCodeChallenge.ssdl|res://*/ModelCodeChallenge.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=.;initial catalog=CodeChallenge;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
@@ -80,7 +81,7 @@
       <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
     </providers>
   </entityFramework>
-    <system.webServer>
-        <directoryBrowse enabled="false" />
-    </system.webServer>
+  <system.webServer>
+    <directoryBrowse enabled="false" />
+  </system.webServer>
 </configuration>
