--- a/MainCodeChallenge/Web.config
+++ b/MainCodeChallenge/Web.config
@@ -70,6 +70,7 @@
   <connectionStrings>
     <add name="CodeChallengeEntities" connectionString="metadata=res://*/ModelCodeChallenge.csdl|res://*/ModelCodeChallenge.ssdl|res://*/ModelCodeChallenge.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=.;initial catalog=CodeChallenge;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
     <add name="CodeChallengeEntities1" connectionString="metadata=res://*/ModelCodeChallenge.csdl|res://*/ModelCodeChallenge.ssdl|res://*/ModelCodeChallenge.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=.;initial catalog=CodeChallenge;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="CodeChallengeEntitie" connectionString="metadata=res://*/ModelCodeChallenge.csdl|res://*/ModelCodeChallenge.ssdl|res://*/ModelCodeChallenge.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=.;initial catalog=CodeChallenge;user id=sa;password=Abc1234@$;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
